// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display the available edition boxes correctly 1`] = `
<div
  className="spacer-bottom marketplace-editions"
>
  <EditionBox
    currentEdition="community"
    edition={
      Object {
        "downloadProperty": "downloadDeveloperUrl",
        "homeUrl": "https://redirect.sonarsource.com/editions/developer.html",
        "key": "developer",
        "name": "Developer Edition",
      }
    }
    key="developer"
  />
  <EditionBox
    currentEdition="community"
    edition={
      Object {
        "downloadProperty": "downloadEnterpriseUrl",
        "homeUrl": "https://redirect.sonarsource.com/editions/enterprise.html",
        "key": "enterprise",
        "name": "Enterprise Edition",
      }
    }
    key="enterprise"
  />
  <EditionBox
    currentEdition="community"
    edition={
      Object {
        "downloadProperty": "downloadDatacenterUrl",
        "homeUrl": "https://redirect.sonarsource.com/editions/datacenter.html",
        "key": "datacenter",
        "name": "Data Center Edition",
      }
    }
    key="datacenter"
  />
</div>
`;

exports[`should display the datacenter edition box only 1`] = `
<div
  className="spacer-bottom marketplace-editions"
>
  <EditionBox
    currentEdition="enterprise"
    edition={
      Object {
        "downloadProperty": "downloadDatacenterUrl",
        "homeUrl": "https://redirect.sonarsource.com/editions/datacenter.html",
        "key": "datacenter",
        "name": "Data Center Edition",
      }
    }
    key="datacenter"
  />
</div>
`;

exports[`should display the enterprise and datacenter edition boxes 1`] = `
<div
  className="spacer-bottom marketplace-editions"
>
  <EditionBox
    currentEdition="developer"
    edition={
      Object {
        "downloadProperty": "downloadEnterpriseUrl",
        "homeUrl": "https://redirect.sonarsource.com/editions/enterprise.html",
        "key": "enterprise",
        "name": "Enterprise Edition",
      }
    }
    key="enterprise"
  />
  <EditionBox
    currentEdition="developer"
    edition={
      Object {
        "downloadProperty": "downloadDatacenterUrl",
        "homeUrl": "https://redirect.sonarsource.com/editions/datacenter.html",
        "key": "datacenter",
        "name": "Data Center Edition",
      }
    }
    key="datacenter"
  />
</div>
`;
